--- a/index.html
+++ b/index.html
@@ -19,6 +19,22 @@
             background-color: #000; /* Black fallback */
             color: white;
         }
+#youtube-player {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: -1;
+    overflow: hidden;
+    pointer-events: none;
+}
+
+#youtube-player iframe {
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+}
 
         #video-background {
             position: fixed;
