--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 <body>
 
     <div id="video-background">
-        <div id="youtube-player"></div>
+       <iframe width="1404" height="1053" src="https://www.youtube.com/embed/pfUCdsLgr4Y?list=RDpfUCdsLgr4Y" title="Thompson - Bojna Čavoglave - (Official Video 1991)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 
     <div class="content-overlay">
