--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HRVATSKA ZOVE6!</title>
+    <title>HRVATSKA ZOVE!</title>
     <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cdefs%3E%3Cpattern id='p' width='50' height='50' patternUnits='userSpaceOnUse'%3E%3Crect fill='%23FF0000' width='25' height='25'/%3E%3Crect fill='%23FF0000' x='25' y='25' width='25' height='25'/%3E%3Crect fill='%23FFFFFF' x='25' width='25' height='25'/%3E%3Crect fill='%23FFFFFF' y='25' width='25' height='25'/%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='%23001369' width='100' height='100'/%3E%3Crect x='5' y='5' width='90' height='90' fill='url(%23p)'/%3E%3Cpath stroke='%23FFFFFF' stroke-width='5' d='M5 95 L5 5 L95 5' fill='none'/%3E%3Cpath stroke='%23800000' stroke-width='5' d='M5 95 L95 95 L95 5' fill='none'/%3E%3C/svg%3E">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,7 +25,6 @@
             top: 0; left: 0;
             width: 100vw;
             height: 100vh;
-            z-index: -2;
             overflow: hidden;
         }
 
@@ -35,8 +34,8 @@
             transform: translate(-50%, -50%);
             min-width: 100vw;
             min-height: 100vh;
-            width: auto;
-            height: auto;
+            width: 100%;
+            height: 100%;
             pointer-events: none;
         }
 
@@ -45,7 +44,7 @@
             top: 0; left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.4); /* Dimming layer */
+            background-color: rgba(0, 0, 0, 0.9); /* Dimming layer */
         }
 
         /* --- Content Overlay --- */
