--- a/index.html
+++ b/index.html
@@ -19,23 +19,24 @@
             color: white;
         }
 
-        /* --- Background Video --- */
-        #video-background {
+        /* Background video container */
+        #video-background, #youtube-player {
             position: fixed;
-            top: 0; left: 0;
+            top: 0;
+            left: 0;
             width: 100vw;
             height: 100vh;
+            z-index: 0;
             overflow: hidden;
         }
 
         #youtube-player iframe {
             position: absolute;
-            top: 50%; left: 50%;
-            transform: translate(-50%, -50%);
-            min-width: 100vw;
-            min-height: 100vh;
+            top: 0;
+            left: 0;
             width: 100%;
             height: 100%;
+            object-fit: cover;
             pointer-events: none;
         }
 
@@ -47,7 +48,6 @@
             background-color: rgba(0, 0, 0, 0.9); /* Dimming layer */
         }
 
-        /* --- Content Overlay --- */
         .content-overlay {
             position: relative;
             height: 100vh;
